added new fun fact gutenberg block

--- a/wp-content/themes/university-animal-clinic/sass/style.scss
+++ b/wp-content/themes/university-animal-clinic/sass/style.scss
@@ -3,6 +3,7 @@
 @import './vendors/owl-carousel';
 @import './vendors/owl-theme-default';
 @import './vendors/icomoon';
+@import './vendors/lity';
 
 // Base 
 @import './base/core';
